--- a/index.html
+++ b/index.html
@@ -11,175 +11,197 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body class="body">
     <header class="header">
-      <nav class="header-nav">
-        <a href="./index.html" class="logo-web link"
-          >WEB <span class="logo-studio">Studio</span>
-        </a>
-        <ul class="menu list text">
-          <li class="menu-item">
-            <a href="./index.html" class="menu-item-link link">Studio</a>
-          </li>
-          <li class="menu-item">
-            <a href="./portfolio.html" class="menu-item-link link">Portfolio</a>
-          </li>
-          <li class="menu-item">
-            <a href="" class="menu-item-link link">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="address">
-        <ul class="contacts list">
-          <li class="contacts-item">
-            <a class="contacts-link link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="contacts-item">
-            <a class="contacts-link link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container header-container">
+        <nav class="header-nav header-container">
+          <a href="./index.html" class="logo-web link"
+            >WEB <span class="logo-studio">Studio</span>
+          </a>
+          <ul class="menu list text">
+            <li class="menu-item">
+              <a href="./index.html" class="menu-item-link link">Studio</a>
+            </li>
+            <li class="menu-item">
+              <a href="./portfolio.html" class="menu-item-link link"
+                >Portfolio</a
+              >
+            </li>
+            <li class="menu-item">
+              <a href="" class="menu-item-link link">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="address">
+          <ul class="contacts list">
+            <li class="contacts-item">
+              <a class="contacts-link link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="contacts-item">
+              <a class="contacts-link link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <!--section1-->
       <section class="hero">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button class="button link btn" type="button">Order Service</button>
+        <div class="container">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button class="button link btn" type="button">Order Service</button>
+        </div>
       </section>
       <!--section2-->
-      <section>
-        <h2 hidden class="features">Features</h2>
-        <ul class="features-list list">
-          <li class="features-item">
-            <h3 class="features-title title-text">Strategy</h3>
-            <p class="features-text text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="features-item">
-            <h3 class="features-title title-text">Punctuality</h3>
-            <p class="features-text text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="features-item">
-            <h3 class="features-title title-text">Diligence</h3>
-            <p class="features-text text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="features-item">
-            <h3 class="features-title title-text">Technologies</h3>
-            <p class="features-text text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+      <section class="features">
+        <div class="container">
+          <h2 hidden>Features</h2>
+          <ul class="features-list list">
+            <li class="features-item">
+              <h3 class="features-title title-text">Strategy</h3>
+              <p class="features-text text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-title title-text">Punctuality</h3>
+              <p class="features-text text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-title title-text">Diligence</h3>
+              <p class="features-text text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-title title-text">Technologies</h3>
+              <p class="features-text text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!--section3-->
       <section class="projects">
-        <h2 class="projects-title">What are we doing</h2>
-        <ul class="projects-list list">
-          <li class="projects-item">
-            <img
-              class="projects-img"
-              src="./images/wawd1.jpg"
-              alt="monitor"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li class="projects-item">
-            <img
-              class="projects-img"
-              src="./images/wawd2.jpg"
-              alt="phone"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li class="projects-item">
-            <img
-              class="projects-img"
-              src="./images/wawd3.jpg"
-              alt="aplication"
-              width="360"
-              height="300"
-            />
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="projects-title">What are we doing</h2>
+          <ul class="projects-list list">
+            <li class="projects-item">
+              <img
+                class="projects-img"
+                src="./images/wawd1.jpg"
+                alt="monitor"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li class="projects-item">
+              <img
+                class="projects-img"
+                src="./images/wawd2.jpg"
+                alt="phone"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li class="projects-item">
+              <img
+                class="projects-img"
+                src="./images/wawd3.jpg"
+                alt="aplication"
+                width="360"
+                height="300"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
       <!--section4-->
-      <section>
-        <h2 class="team-title">Our Team</h2>
-        <ul class="team-list list">
-          <li class="team-item list">
-            <img
-              class="team-img"
-              src="./images/ourteam1.jpg"
-              alt="Product Designer"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-name title-text">Mark Guerrero</h3>
-            <p class="team-position text">Product Designer</p>
-          </li>
-          <li class="team-item list">
-            <img
-              class="team-img"
-              src="./images/ourteam2.jpg"
-              alt="Frontend Developer"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-name title-text">Tom Ford</h3>
-            <p class="team-position text">Frontend Developer</p>
-          </li>
-          <li class="team-item list">
-            <img
-              class="team-img"
-              src="./images/ourteam3.jpg"
-              alt="Marketing"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-name title-text">Camila Garcia</h3>
-            <p class="team-position text">Marketing</p>
-          </li>
-          <li class="team-item list">
-            <img
-              class="team-img"
-              src="./images/ourteam4.jpg"
-              alt="UI Designer"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-name title-text">Daniel Wilson</h3>
-            <p class="team-position text">UI Designer</p>
-          </li>
-        </ul>
+      <section class="team">
+        <div class="container">
+          <h2 class="team-title">Our Team</h2>
+          <ul class="team-list list">
+            <li class="team-item list">
+              <img
+                class="team-img"
+                src="./images/ourteam1.jpg"
+                alt="Product Designer"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-name title-text">Mark Guerrero</h3>
+              <p class="team-position text">Product Designer</p>
+            </li>
+            <li class="team-item list">
+              <img
+                class="team-img"
+                src="./images/ourteam2.jpg"
+                alt="Frontend Developer"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-name title-text">Tom Ford</h3>
+              <p class="team-position text">Frontend Developer</p>
+            </li>
+            <li class="team-item list">
+              <img
+                class="team-img"
+                src="./images/ourteam3.jpg"
+                alt="Marketing"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-name title-text">Camila Garcia</h3>
+              <p class="team-position text">Marketing</p>
+            </li>
+            <li class="team-item list">
+              <img
+                class="team-img"
+                src="./images/ourteam4.jpg"
+                alt="UI Designer"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-name title-text">Daniel Wilson</h3>
+              <p class="team-position text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
+    <!--section-footer-->
     <footer class="footer">
-      <a href="./index.html" class="footer-logo-web link"
-        >WEB
-        <span class="footer-logo-studio link">Studio</span>
-      </a>
+      <div class="container">
+        <a href="./index.html" class="footer-logo-web link"
+          >WEB
+          <span class="footer-logo-studio link">Studio</span>
+        </a>
 
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
