--- a/portfolio.html
+++ b/portfolio.html
@@ -11,201 +11,220 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header class="header">
-      <nav class="header-nav">
-        <a href="./index.html" class="logo-web link"
-          >WEB <span class="logo-studio link">STUDIO</span>
-        </a>
-        <ul class="menu list">
-          <li class="menu-item">
-            <a href="./index.html" class="menu-item-link link">Studio</a>
+      <div class="container header-container">
+        <nav class="header-nav header-container">
+          <a href="./index.html" class="logo-web link"
+            >WEB <span class="logo-studio link">STUDIO</span>
+          </a>
+          <ul class="menu list">
+            <li class="menu-item">
+              <a href="./index.html" class="menu-item-link link">Studio</a>
+            </li>
+            <li class="menu-item">
+              <a href="./portfolio.html" class="menu-item-link link"
+                >Portfolio</a
+              >
+            </li>
+            <li class="menu-item">
+              <a href="" class="menu-item-link link">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <ul class="contacts list">
+          <li class="contacts-item">
+            <a class="contacts-link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
-          <li class="menu-item">
-            <a href="./portfolio.html" class="menu-item-link link">Portfolio</a>
-          </li>
-          <li class="menu-item">
-            <a href="" class="menu-item-link link">Contacts</a>
+          <li class="contacts-item">
+            <a class="contacts-link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
-      </nav>
-      <ul class="contacts list">
-        <li class="contacts-item">
-          <a class="contacts-link" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li class="contacts-item">
-          <a class="contacts-link" href="tel:+110001111111"
-            >+11 (000) 111-11-11</a
-          >
-        </li>
-      </ul>
+      </div>
     </header>
     <main>
       <!--section1-->
       <section class="portfolio-section">
-        <h1 hidden class="buttons">filters</h1>
-        <ul class="section-button list">
-          <li class="btn-link-item list">
-            <button class="button-link link btn" type="button">All</button>
-          </li>
-          <li class="btn-link-item list">
-            <button class="button-link link btn" type="button">Web Site</button>
-          </li>
-          <li>
-            <button class="button-link link btn" type="button">App</button>
-          </li>
-          <li class="btn-link-item list">
-            <button class="button-link link btn" type="button">Design</button>
-          </li>
-          <li class="btn-link-item list">
-            <button class="button-link link btn" type="button">
-              Marketing
-            </button>
-          </li>
-        </ul>
-        <ul class="projectcard list">
-          <li class="projectcard-item">
-            <a class="link" href="">
-              <img
-                class="projectcard-img"
-                src="./images/banking_app.jpg"
-                alt="Banking App Interface Concept"
-                width="360"
-                height="300"
-              />
-              <h2 class="projectcard-name link title-text">
-                Banking App Interface Concept
-              </h2>
-              <p class="projectcard-position link text">App</p>
-            </a>
-          </li>
-          <li class="projectcard-item">
-            <a class="link" href="">
-              <img
-                class="projectcard-img"
-                src="./images/cashless.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-              />
-              <h2 class="projectcard-name link title-text">Cashless Payment</h2>
-              <p class="projectcard-position link text">Marketing</p>
-            </a>
-          </li>
-          <li class="projectcard-item">
-            <a class="link" href="">
-              <img
-                class="projectcard-img"
-                src="./images/meditaion.jpg"
-                alt="Meditaion App"
-                width="360"
-                height="300"
-              />
-              <h2 class="projectcard-name link title-text">Meditation App</h2>
-              <p class="projectcard-position link text">App</p>
-            </a>
-          </li>
-          <li class="projectcard-item">
-            <a class="link" href="">
-              <img
-                class="projectcard-img"
-                src="./images/taxi.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
-              />
-              <h2 class="projectcard-name link title-text">Taxi Service</h2>
-              <p class="projectcard-position link text">Marketing</p>
-            </a>
-          </li>
-          <li class="projectcard-item">
-            <a class="link" href="">
-              <img
-                class="projectcard-img"
-                src="./images/screen.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-              />
+        <div class="container">
+          <h1 hidden class="buttons">filters</h1>
+          <ul class="section-button list">
+            <li class="btn-link-item list">
+              <button class="button-link link btn" type="button">All</button>
+            </li>
+            <li class="btn-link-item list">
+              <button class="button-link link btn" type="button">
+                Web Site
+              </button>
+            </li>
+            <li class="btn-link-item list">
+              <button class="button-link link btn" type="button">App</button>
+            </li>
+            <li class="btn-link-item list">
+              <button class="button-link link btn" type="button">Design</button>
+            </li>
+            <li class="btn-link-item list">
+              <button class="button-link link btn" type="button">
+                Marketing
+              </button>
+            </li>
+          </ul>
+          <ul class="projectcard list">
+            <li class="projectcard-item">
+              <a class="link" href="">
+                <img
+                  class="projectcard-img"
+                  src="./images/banking_app.jpg"
+                  alt="Banking App Interface Concept"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="projectcard-name link title-text">
+                  Banking App Interface Concept
+                </h2>
+                <p class="projectcard-position link text">App</p>
+              </a>
+            </li>
+            <li class="projectcard-item">
+              <a class="link" href="">
+                <img
+                  class="projectcard-img"
+                  src="./images/cashless.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="projectcard-name link title-text">
+                  Cashless Payment
+                </h2>
+                <p class="projectcard-position link text">Marketing</p>
+              </a>
+            </li>
+            <li class="projectcard-item">
+              <a class="link" href="">
+                <img
+                  class="projectcard-img"
+                  src="./images/meditaion.jpg"
+                  alt="Meditaion App"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="projectcard-name link title-text">Meditation App</h2>
+                <p class="projectcard-position link text">App</p>
+              </a>
+            </li>
+            <li class="projectcard-item">
+              <a class="link" href="">
+                <img
+                  class="projectcard-img"
+                  src="./images/taxi.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="projectcard-name link title-text">Taxi Service</h2>
+                <p class="projectcard-position link text">Marketing</p>
+              </a>
+            </li>
+            <li class="projectcard-item">
+              <a class="link" href="">
+                <img
+                  class="projectcard-img"
+                  src="./images/screen.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                  height="300"
+                />
 
-              <h2 class="projectcard-name link title-text">
-                Screen Illustrations
-              </h2>
-              <p class="projectcard-position link text">Design</p>
-            </a>
-          </li>
-          <li class="projectcard-item">
-            <a class="link" href="">
-              <img
-                class="projectcard-img"
-                src="./images/online_courses.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-              />
-              <h2 class="projectcard-name link title-text">Online Courses</h2>
-              <p class="projectcard-position link text">Marketing</p>
-            </a>
-          </li>
-          <li class="projectcard-item">
-            <a class="link" href="">
-              <img
-                class="projectcard-img"
-                src="./images/instagram.jpg"
-                alt="Instagram Stories Concept"
-                width="360"
-                height="300"
-              />
-              <h2 class="projectcard-name link title-text">
-                Instagram Stories Concept
-              </h2>
-              <p class="projectcard-position link text">Design</p>
-            </a>
-          </li>
-          <li class="projectcard-item">
-            <a class="link" href="">
-              <img
-                class="projectcard-img"
-                src="./images/organic_food.jpg"
-                alt="Organic Food"
-                width="360"
-                height="300"
-              />
-              <h2 class="projectcard-name link title-text">Organic Food</h2>
-              <p class="projectcard-position link text">Web Site</p>
-            </a>
-          </li>
-          <li class="projectcard-item">
-            <a class="link" href="">
-              <img
-                class="projectcard-img"
-                src="./images/fresh_coffee.jpg"
-                alt="Fresh Coffee"
-                width="360"
-                height="300"
-              />
-              <h2 class="projectcard-name link title-text">Fresh Coffee</h2>
-              <p class="projectcard-position link text">Web Site</p>
-            </a>
-          </li>
-        </ul>
+                <h2 class="projectcard-name link title-text">
+                  Screen Illustrations
+                </h2>
+                <p class="projectcard-position link text">Design</p>
+              </a>
+            </li>
+            <li class="projectcard-item">
+              <a class="link" href="">
+                <img
+                  class="projectcard-img"
+                  src="./images/online_courses.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="projectcard-name link title-text">Online Courses</h2>
+                <p class="projectcard-position link text">Marketing</p>
+              </a>
+            </li>
+            <li class="projectcard-item">
+              <a class="link" href="">
+                <img
+                  class="projectcard-img"
+                  src="./images/instagram.jpg"
+                  alt="Instagram Stories Concept"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="projectcard-name link title-text">
+                  Instagram Stories Concept
+                </h2>
+                <p class="projectcard-position link text">Design</p>
+              </a>
+            </li>
+            <li class="projectcard-item">
+              <a class="link" href="">
+                <img
+                  class="projectcard-img"
+                  src="./images/organic_food.jpg"
+                  alt="Organic Food"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="projectcard-name link title-text">Organic Food</h2>
+                <p class="projectcard-position link text">Web Site</p>
+              </a>
+            </li>
+            <li class="projectcard-item">
+              <a class="link" href="">
+                <img
+                  class="projectcard-img"
+                  src="./images/fresh_coffee.jpg"
+                  alt="Fresh Coffee"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="projectcard-name link title-text">Fresh Coffee</h2>
+                <p class="projectcard-position link text">Web Site</p>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <!--section2-->
     <footer class="footer">
-      <a href="./index.html" class="footer-logo-web link"
-        >WEB
-        <span class="footer-logo-studio link">STUDIO</span>
-      </a>
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a href="./index.html" class="footer-logo-web link"
+          >WEB
+          <span class="footer-logo-studio link">STUDIO</span>
+        </a>
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
