--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
     </header>
     <main>
       <!--section1-->
-      <section class="hero">
+      <section class="section hero">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button class="button link btn" type="button">Order Service</button>
         </div>
       </section>
       <!--section2-->
-      <section class="features">
+      <section class="section features">
         <div class="container">
           <h2 hidden>Features</h2>
           <ul class="features-list list">
@@ -102,7 +102,7 @@
         </div>
       </section>
       <!--section3-->
-      <section class="projects">
+      <section class="section projects">
         <div class="container">
           <h2 class="projects-title">What are we doing</h2>
           <ul class="projects-list list">
@@ -137,7 +137,7 @@
         </div>
       </section>
       <!--section4-->
-      <section class="team">
+      <section class="section team">
         <div class="container">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list list">
@@ -149,8 +149,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-name title-text">Mark Guerrero</h3>
-              <p class="team-position text">Product Designer</p>
+              <div class="element-style">
+                <h3 class="team-name title-text">Mark Guerrero</h3>
+                <p class="team-position text">Product Designer</p>
+              </div>
             </li>
             <li class="team-item list">
               <img
@@ -160,8 +162,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-name title-text">Tom Ford</h3>
-              <p class="team-position text">Frontend Developer</p>
+              <div class="element-style">
+                <h3 class="team-name title-text">Tom Ford</h3>
+                <p class="team-position text">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-item list">
               <img
@@ -171,8 +175,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-name title-text">Camila Garcia</h3>
-              <p class="team-position text">Marketing</p>
+              <div class="element-style">
+                <h3 class="team-name title-text">Camila Garcia</h3>
+                <p class="team-position text">Marketing</p>
+              </div>
             </li>
             <li class="team-item list">
               <img
@@ -182,8 +188,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-name title-text">Daniel Wilson</h3>
-              <p class="team-position text">UI Designer</p>
+              <div class="element-style">
+                <h3 class="team-name title-text">Daniel Wilson</h3>
+                <p class="team-position text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
