--- a/portfolio.html
+++ b/portfolio.html
@@ -57,7 +57,7 @@
     </header>
     <main>
       <!--section1-->
-      <section class="portfolio-section">
+      <section class="section portfolio-section">
         <div class="container">
           <h1 hidden class="buttons">filters</h1>
           <ul class="section-button list">
@@ -91,10 +91,12 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="projectcard-name link title-text">
-                  Banking App Interface Concept
-                </h2>
-                <p class="projectcard-position link text">App</p>
+                <div class="element-style">
+                  <h2 class="projectcard-name link title-text">
+                    Banking App Interface Concept
+                  </h2>
+                  <p class="projectcard-position link text">App</p>
+                </div>
               </a>
             </li>
             <li class="projectcard-item">
@@ -106,10 +108,12 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="projectcard-name link title-text">
-                  Cashless Payment
-                </h2>
-                <p class="projectcard-position link text">Marketing</p>
+                <div class="element-style">
+                  <h2 class="projectcard-name link title-text">
+                    Cashless Payment
+                  </h2>
+                  <p class="projectcard-position link text">Marketing</p>
+                </div>
               </a>
             </li>
             <li class="projectcard-item">
@@ -121,6 +125,12 @@
                   width="360"
                   height="300"
                 />
+                <div class="element-style">
+                  <h2 class="projectcard-name link title-text">
+                    Meditation App
+                  </h2>
+                  <p class="projectcard-position link text">App</p>
+                </div>
                 <h2 class="projectcard-name link title-text">Meditation App</h2>
                 <p class="projectcard-position link text">App</p>
               </a>
@@ -134,6 +144,10 @@
                   width="360"
                   height="300"
                 />
+                <div class="element-style">
+                  <h2 class="projectcard-name link title-text">Taxi Service</h2>
+                  <p class="projectcard-position link text">Marketing</p>
+                </div>
                 <h2 class="projectcard-name link title-text">Taxi Service</h2>
                 <p class="projectcard-position link text">Marketing</p>
               </a>
@@ -147,7 +161,12 @@
                   width="360"
                   height="300"
                 />
-
+                <div class="element-style">
+                  <h2 class="projectcard-name link title-text">
+                    Screen Illustrations
+                  </h2>
+                  <p class="projectcard-position link text">Design</p>
+                </div>
                 <h2 class="projectcard-name link title-text">
                   Screen Illustrations
                 </h2>
@@ -163,8 +182,12 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="projectcard-name link title-text">Online Courses</h2>
-                <p class="projectcard-position link text">Marketing</p>
+                <div class="element-style">
+                  <h2 class="projectcard-name link title-text">
+                    Online Courses
+                  </h2>
+                  <p class="projectcard-position link text">Marketing</p>
+                </div>
               </a>
             </li>
             <li class="projectcard-item">
@@ -176,10 +199,12 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="projectcard-name link title-text">
-                  Instagram Stories Concept
-                </h2>
-                <p class="projectcard-position link text">Design</p>
+                <div class="element-style">
+                  <h2 class="projectcard-name link title-text">
+                    Instagram Stories Concept
+                  </h2>
+                  <p class="projectcard-position link text">Design</p>
+                </div>
               </a>
             </li>
             <li class="projectcard-item">
@@ -191,8 +216,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="projectcard-name link title-text">Organic Food</h2>
-                <p class="projectcard-position link text">Web Site</p>
+                <div class="element-style">
+                  <h2 class="projectcard-name link title-text">Organic Food</h2>
+                  <p class="projectcard-position link text">Web Site</p>
+                </div>
               </a>
             </li>
             <li class="projectcard-item">
@@ -204,8 +231,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="projectcard-name link title-text">Fresh Coffee</h2>
-                <p class="projectcard-position link text">Web Site</p>
+                <div class="element-style">
+                  <h2 class="projectcard-name link title-text">Fresh Coffee</h2>
+                  <p class="projectcard-position link text">Web Site</p>
+                </div>
               </a>
             </li>
           </ul>
@@ -214,7 +243,7 @@
     </main>
 
     <!--section2-->
-    <footer class="footer">
+    <footer class="section footer">
       <div class="container">
         <a href="./index.html" class="footer-logo-web link"
           >WEB
